--- a/index.html
+++ b/index.html
@@ -6,21 +6,50 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Fondamento&family=Nothing+You+Could+Do&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/js/all.min.js">
     <link rel="stylesheet" href="assets/style.css">
     <title>spellbook</title>
 </head>
 
-<body>
-    <header class="container-fluid bg-info text-light text-center">
-        <h1>spellbook</h1>
-    </header>
-    <main class="container">
+<body class="font-standard table-bg">
+    <main class="container main-body w-100">
+        <div class="row justify-content-between">
+            <div class="col-4 h-100 paper-bg text-center px-4 py-3">
+                <h2 class=" mb-5">Spells</h2>
+                <div id="spell-list" class="row">
+                    <!-- Spells Template -->
+                    <button class="btn col p-1 text-capitalize"
+                        onclick="app.spellsController.addSpell('${spell-name}')">
+                        ~ spell Name ~
+                    </button>
+                    <!-- SPells Templaet -->
+                </div>
+            </div>
+            <div class="col-7 px-0 py-5">
+                Spell Book
+                <div class="row bg-primary py-1 px-2">
+                    <div class="col-12 paper-bg p-5">
+
+                        <div class="row">
+                            <div class="col-6 border-dark border-right">
+                                - My spells -
+                            </div>
+                            <div class="col-6">
+                                spell decription goes here
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 
     </main>
-    <footer class="container-fluid bg-info text-light">
+    <footer class="container-fluid text-light">
         <div class="row text-center">
             <div class="col">
-                <p><small>Made with love by Codeworks</small></p>
+                <p><small>Made with love by T&M</small></p>
             </div>
         </div>
     </footer>
