--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
                         <div class="row">
                             <div class="col-6 border-dark border-right">
-                                - My spells -
+                                <h4 class="text-center p-1">-My Spells -</h4>
                                 <div id="my-spells" class="row">
                                     <div class="col-12 text-capitalize">
                                         ~my spell Name~
@@ -44,11 +44,11 @@
                             <div class="col-6">
                                 <div class="row">
                                     <h3 class="col-12 text-center">school</h3>
-                                    <img src="" alt="spell image goes here" class="col-12">
+                                    <div class="col-12 school-abjuration"></div>
                                     <h2 class=" col-12 text-center">Title of the spell goes here</h2>
-                                    <h5 class="col-4">Casting Time</h5>
-                                    <h5 class="col-4">components</h5>
-                                    <h5 class="col-4">range</h5>
+                                    <h6 class="col-4 border-dark border-right">Casting Time</h6>
+                                    <h6 class="col-4 border-dark border-right">components</h6>
+                                    <h6 class="col-4">range</h6>
                                     <h6 class="col-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                                         Sapiente odit rerum
                                         voluptate, earum at facere cumque itaque, ab laboriosam reiciendis totam fuga
