--- a/index.html
+++ b/index.html
@@ -36,24 +36,27 @@
                             <div class="col-6 border-dark border-right">
                                 <h4 class="text-center p-1">-My Spells -</h4>
                                 <div id="my-spells" class="row">
+                                    <!-- Spell Book Spell template -->
                                     <div class="col-12 text-capitalize">
                                         ~my spell Name~
                                     </div>
+                                    <!-- Spell Book Spell Template -->
                                 </div>
                             </div>
                             <div class="col-6">
                                 <div class="row">
+                                    <!-- Full Spell Template -->
                                     <h3 class="col-12 text-center">school</h3>
                                     <div class="col-12 school-abjuration"></div>
                                     <h2 class=" col-12 text-center">Title of the spell goes here</h2>
-                                    <h6 class="col-4 border-dark border-right">Casting Time</h6>
-                                    <h6 class="col-4 border-dark border-right">components</h6>
-                                    <h6 class="col-4">range</h6>
+                                    <h6 class="col-4 text-center border-dark border-right">Casting Time</h6>
+                                    <h6 class="col-4 text-center border-dark border-right">components</h6>
+                                    <h6 class="col-4 text-center">range</h6>
                                     <h6 class="col-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                                         Sapiente odit rerum
                                         voluptate, earum at facere cumque itaque, ab laboriosam reiciendis totam fuga
                                         eius expedita nihil quia! Voluptate quos expedita mollitia!</h6>
-
+                                    <!-- Full Spell Tempalte -->
                                 </div>
                             </div>
                         </div>
