--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     <title>spellbook</title>
 </head>
 
-<body class="font-standard table-bg">
+<body class="font-title table-bg">
     <main class="container main-body w-100">
         <div class="row justify-content-between">
             <div class="col-4 h-100 paper-bg shadow-lg text-center px-4 py-3">
-                <h2 class=" mb-5">Spells</h2>
+                <h2 class=" mb-5 font-title">Spells</h2>
                 <div id="spell-list" class="row">
                     <!-- Spells Template -->
-                    <button class="btn col p-1 text-capitalize"
+                    <button class="btn col-12 p-1  text-capitalize"
                         onclick="app.spellsController.addSpell('${spell-name}')">
                         ~ spell Name ~
                     </button>
@@ -35,10 +35,10 @@
 
                         <div class="row">
                             <div class="col-6 border-dark border-right">
-                                <h4 class="text-center p-1">-My Spells -</h4>
+                                <h4 class="text-center font-title p-1">-My Spells -</h4>
                                 <div id="my-spells" class="row">
                                     <!-- Spell Book Spell template -->
-                                    <div class="col-12 text-capitalize">
+                                    <div class="col-12 font-handwritten text-capitalize">
                                         ~my spell Name~
                                     </div>
                                     <!-- Spell Book Spell Template -->
@@ -47,13 +47,16 @@
                             <div class="col-6">
                                 <div class="row">
                                     <!-- Full Spell Template -->
-                                    <h3 class="col-12 text-center">school</h3>
+                                    <h3 class="col-12 font-title text-center">school</h3>
                                     <div class="col-12 school-abjuration"></div>
                                     <h2 class=" col-12 text-center">Title of the spell goes here</h2>
-                                    <h6 class="col-4 text-center border-dark border-right">Casting Time</h6>
-                                    <h6 class="col-4 text-center border-dark border-right">components</h6>
-                                    <h6 class="col-4 text-center">range</h6>
-                                    <h6 class="col-12">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                                    <h6 class="col-4 text-center font-title border-dark border-right">Casting Time
+                                    </h6>
+                                    <h6 class="col-4 text-center font-title border-dark border-right">components
+                                    </h6>
+                                    <h6 class="col-4 text-center font-title">range</h6>
+                                    <h6 class="col-12 font-handwritten">Lorem, ipsum dolor sit amet consectetur
+                                        adipisicing elit.
                                         Sapiente odit rerum
                                         voluptate, earum at facere cumque itaque, ab laboriosam reiciendis totam fuga
                                         eius expedita nihil quia! Voluptate quos expedita mollitia!</h6>
