--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body class="font-title table-bg">
     <main class="container main-body w-100">
         <div class="row justify-content-between">
+            <!-- SECTION SPELL LIST -->
             <div class="col-4 h-100 paper-bg shadow-lg text-center px-4 py-3">
                 <h2 class=" mb-5 font-title">Spells</h2>
                 <div id="spell-list" class="row">
@@ -28,9 +29,10 @@
                     <!-- SPells Templaet -->
                 </div>
             </div>
+            <!-- SECTION SPELL BOOK -->
             <div class="col-7 px-0 py-5">
                 Spell Book
-                <div class="row bg-primary shadow py-1 px-2">
+                <div class="row bg-success shadow py-1 px-2">
                     <div class="col-12 paper-bg shadow p-5">
 
                         <div class="row">
@@ -38,9 +40,10 @@
                                 <h4 class="text-center font-title p-1">-My Spells -</h4>
                                 <div id="my-spells" class="row">
                                     <!-- Spell Book Spell template -->
-                                    <div class="col-12 font-handwritten text-capitalize">
-                                        ~my spell Name~
-                                    </div>
+                                    <button class="btn col-12 p-1 text-capitalize font-handwritten text-left"
+                                        onclick="app.spellsController.getSelectedSpell('${spell-name}')">
+                                        ~ spell Name ~
+                                    </button>
                                     <!-- Spell Book Spell Template -->
                                 </div>
                             </div>
