got a commit for your

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body class="font-title table-bg">
     <main class="container main-body w-100">
         <div class="row justify-content-between">
-            <!-- SECTION SPELL LIST -->
+            <!-- SECTION SPELL -->
             <div class="col-4 h-100 paper-bg shadow-lg text-center px-4 py-3">
                 <h2 class=" mb-5 font-title">Spells</h2>
                 <div id="spell-list" class="row">
@@ -48,7 +48,7 @@
                                 </div>
                             </div>
                             <div class="col-6">
-                                <div class="row">
+                                <div id="selected-spell" class="row">
                                     <!-- Full Spell Template -->
                                     <h3 class="col-12 font-title text-center">school</h3>
                                     <div class="col-12 school-abjuration"></div>
