--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <!-- SECTION SPELL -->
             <div class="col-4 paper-bg shadow-lg text-center px-4 py-3">
                 <h2 class=" mb-5 font-title">Spells</h2>
-                <div id="spell-list" class="row spell-list overflow-auto">
+                <div id="spell-list" class="row spell-list overflow-auto s s2">
                     <!-- Spells Template -->
                     <button class="btn col-12 p-1  text-capitalize"
                         onclick="app.spellsController.addSpell('${spell-name}')">
