--- a/index.html
+++ b/index.html
@@ -31,9 +31,8 @@
             </div>
             <!-- SECTION SPELL BOOK -->
             <div class="col-7 px-0 py-5">
-                Spell Book
                 <div class="row bg-success shadow py-1 px-2">
-                    <div class="col-12 paper-bg shadow p-5">
+                    <div class="col-12 paper-bg shadow p-5 book-height">
 
                         <div class="row">
                             <div class="col-6 border-dark border-right">
