--- a/index.html
+++ b/index.html
@@ -64,10 +64,12 @@
                                         eius expedita nihil quia! Voluptate quos expedita mollitia!</h6>
                                     <!-- Full Spell Tempalte -->
                                 </div>
+                                <button class="btn btn-block" onclick="app.spellsController.addSpellToBook()">Add spell to book</button>
                             </div>
                         </div>
                     </div>
                 </div>
+                
             </div>
         </div>
 
