add Delete spell, and no dupe spell add

--- a/index.html
+++ b/index.html
@@ -63,13 +63,16 @@
                                         voluptate, earum at facere cumque itaque, ab laboriosam reiciendis totam fuga
                                         eius expedita nihil quia! Voluptate quos expedita mollitia!</h6>
                                     <!-- Full Spell Tempalte -->
+                                    <button class="btn btn-block" onclick="app.spellsController.addSpellToBook()">Add
+                                        spell to book</button>
                                 </div>
-                                <button class="btn btn-block" onclick="app.spellsController.addSpellToBook()">Add spell to book</button>
+                                <button class="btn btn-block"
+                                    onclick="app.spellsController.removeSpellFromBook()">Remove spell from book</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                
+
             </div>
         </div>
 
